@@ -1,6 +1,11 @@
+2005-04-04  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-main.c:
+	Initialise the audio profiles before creating an SjExtractor.
+
 2005-03-31  Steve Murphy  <murf@e-tools.com>
 
-        * configure.in: Added "rw" to ALL_LINGUAS.
+	* configure.in: Added "rw" to ALL_LINGUAS.
 
 2005-03-23  Adi Attar  <aattar@cvs.gnome.org>
 
